overflow avoided

--- a/front-end/src/components/styles/Header.module.css
+++ b/front-end/src/components/styles/Header.module.css
@@ -5,6 +5,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  /*changes*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  width: 100%;
 }
 
 .logo a {
@@ -62,6 +69,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .modalContent {
